--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,6 +54,12 @@ allprojects {
                 excludeGroup 'com.facebook.react'
             }
         }
-        maven { url 'https://www.jitpack.io' }
+        maven { url "$rootDir/../node_modules/react-native/android" }
+
+          maven { url 'https://www.jitpack.io' }
+
+         maven { url 'https://maven.google.com' }
+
+
     }
 }
