--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-picker": "^4.8.4",
+    "react-native-web": "0.17.7",
+    "expo-image-picker": "~13.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "typescript": "~4.3.5",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6"
+    "@types/react-native": "~0.67.6",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
